# openGA

./: .clang-format  CMakeLists.txt
examples/: CMakeLists.txt
examples/iga-colors/: CMakeLists.txt  gui.hpp  iga-colors.cpp
examples/mo-1/: CMakeLists.txt  example_mo1.cpp
examples/mo-dtlz2/: CMakeLists.txt  mo-dtlz2.cpp
examples/so-1/: CMakeLists.txt  example_so1.cpp
examples/so-bind/: CMakeLists.txt  example_bind.cpp
examples/so-init-solutions/: CMakeLists.txt  example_so-init-solutions.cpp
examples/so-multi-source/: CMakeLists.txt  header.hpp  multi-source-part1.cpp  multi-source-part2.cpp  multi-source-part3.cpp
examples/so-rastrigin/: CMakeLists.txt  so-rastrigin.cpp
src/: CMakeLists.txt  Definitions.hpp  Matrix.hpp  Matrix.test.cpp  openGA.hpp  tests.cmake
